--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build" : "webpack"
+    "build": "webpack"
+  },
+  "dependencies": {
+    "@trevoreyre/autocomplete-js": "^2.4.1"
   }
 }
